# webcap

./: .gitignore  AGENTS.md  CHANGELOG.md  CHECKLIST.md  COMPLETION_REPORT.txt  Cargo.toml  DEVELOPMENT.md  FILE_STRUCTURE.txt  INDEX.md  INSTALL.md  MODULARIZATION.md  PROJECT_SUMMARY.md  QUICKSTART.sh  README.md  SHORTCUTS.md  SPEC.md  SRS-SDD.md  TEST_PASS.md  VERIFICATION.md  annotate.md  background_deface.md  build.rs  clean_checklist.js  copilot_rules.md  current_renderGroupWorkbench.txt  filesystem_refactor_plan.md  focused_annotation.md  layout_changes.txt  main.py  media.db  media_metadata.md  original_checklist.js  package-lock.json  package.json  playwright.config.ts  requirements.txt  spec.md  spec_v6_ultra_minimal.md  spec_v7.md  spec_v8.md  (+2 more)
data/: EXAMPLE.md
docs/: annotation_term_affixes.md  autosave.md  balance_distribution_wheel.md  caption-review.md  caption_requirements.md  config_file_editing.md  config_file_system.md  console_panel.md  copilot_rules.md  create_set_from_results.md  dataset_config.md  dataset_workflow.md  duplicate_image.md  face_counts.md  feature_spec.md  filtered_selection_set.md  flag.md  focused_annotation.md  generate_config_mode.md  image_crop.md  image_rotate.md  media_grid.md  media_metadata.md  media_metadata_panel.md  north_star_workflow.md  outstanding.md  phrase_copy.md  phrases_tags_balance_unification.md  primer_mappings_v2.md  prune.md  qa_panel.md  rename.md  repeat_targeting.md  requirements_config_baseline.md  reset.md  restore.md  review.md  scene_complexity.md  selection_pose_stack.md  selection_report.md  (+14 more)
(+170 files in other folders)
